--- a/index.html
+++ b/index.html
@@ -5,37 +5,116 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>GodotGameAssembler</title>
 <style>
-  body { font-family:sans-serif; margin:0; padding:0; background:#1e1e1e; color:#f0f0f0; height:100vh; display:flex; flex-direction:column; }
-  header { background:#282c34; padding:1em; text-align:center; font-size:1.5em; flex-shrink:0; }
-  #main { display:flex; flex:1; overflow:hidden; }
-  #left-panel, #right-panel { flex:1; display:flex; flex-direction:column; overflow:auto; padding:1em; gap:1em; }
-  #left-panel { background:#2b2b2b; min-width:300px; max-width:400px; }
-  #right-panel { background:#2a2a2a; flex:2; }
-  .panel { background:#3a3a3a; border-radius:8px; padding:1em; margin-bottom:1em; }
-  .tabs { display:flex; gap:1em; cursor:pointer; margin-bottom:0.5em; }
-  .tab { padding:0.5em 1em; background:#444; border-radius:4px; }
-  .tab.active { background:#666; }
-  .tab-content { display:none; }
-  .tab-content.active { display:block; }
-  button { padding:0.5em 1em; border:none; border-radius:4px; cursor:pointer; margin-top:0.5em; }
-  input, select, textarea { width:100%; padding:0.5em; border-radius:4px; border:none; margin-top:0.5em; }
-  #nlp-panel { background:#1b1b1b; padding:1em; flex-shrink:0; height:180px; display:flex; flex-direction:column; }
-  #nlp-interface { overflow-y:auto; flex:1; margin-bottom:0.5em; }
+  body {
+    font-family: sans-serif;
+    margin:0;
+    padding:0;
+    background:#1e1e1e;
+    color:#f0f0f0;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+  }
+
+  header {
+    background:#282c34;
+    padding:1em;
+    text-align:center;
+    font-size:1.5em;
+  }
+
+  #main-container {
+    flex:1;
+    display:flex;
+    flex-direction: column;
+    gap:0.5em;
+    padding:0.5em;
+    overflow:hidden;
+  }
+
+  /* Top Split: File Browser | Asset Preview */
+  #top-panel {
+    flex:1;
+    display:flex;
+    gap:0.5em;
+    overflow:hidden;
+  }
+
+  .panel {
+    background:#2b2b2b;
+    padding:1em;
+    border-radius:8px;
+    flex:1;
+    min-width:200px;
+    overflow:auto;
+  }
+
+  /* Tabs for asset preview */
+  .tab-header {
+    display:flex;
+    gap:0.5em;
+    margin-bottom:0.5em;
+  }
+
+  .tab {
+    padding:0.3em 0.6em;
+    background:#444;
+    border-radius:4px;
+    cursor:pointer;
+  }
+
+  .tab.active {
+    background:#f0f0f0;
+    color:#000;
+  }
+
+  .tab-content {
+    display:none;
+  }
+
+  .tab-content.active {
+    display:block;
+  }
+
+  #nlp-panel {
+    height:200px;
+    display:flex;
+    flex-direction: column;
+  }
+
+  #nlp-interface {
+    flex:1;
+    overflow-y:auto;
+    background:#1b1b1b;
+    padding:0.5em;
+    border-radius:4px;
+  }
+
+  input, select, textarea, button {
+    margin-top:0.5em;
+    width:100%;
+    padding:0.5em;
+    border-radius:4px;
+    border:none;
+    font-size:1em;
+  }
+
+  button {
+    cursor:pointer;
+    background:#4caf50;
+    color:#fff;
+  }
 </style>
 </head>
 <body>
 <header>GodotGameAssembler</header>
 
-<div id="main">
-  <!-- Left Panel: Tabs -->
-  <div id="left-panel">
-    <div class="tabs">
-      <div class="tab active" data-tab="scene-tab">Scenes</div>
-      <div class="tab" data-tab="asset-tab">Assets</div>
-      <div class="tab" data-tab="export-tab">Export</div>
-    </div>
+<div id="main-container">
 
-    <div id="scene-tab" class="tab-content active panel">
+  <!-- Top Split -->
+  <div id="top-panel">
+    <!-- File Browser -->
+    <div class="panel" id="scene-manager">
       <h3>Scenes & Nodes</h3>
       <input type="text" id="scene-name" placeholder="Scene name">
       <button onclick="addSceneGUI()">Add Scene</button>
@@ -55,52 +134,55 @@
       <div id="node-list"></div>
     </div>
 
-    <div id="asset-tab" class="tab-content panel">
+    <!-- Asset Preview -->
+    <div class="panel" id="asset-manager">
       <h3>Assets</h3>
-      <input type="file" id="asset-upload" multiple>
-      <select id="asset-type">
-        <option value="texture">Texture</option>
-        <option value="gltf">GLTF Model</option>
-        <option value="audio">Audio</option>
-        <option value="font">Font</option>
-      </select>
-      <button onclick="uploadAssetsGUI()">Upload Asset(s)</button>
-      <ul id="asset-list"></ul>
-    </div>
-
-    <div id="export-tab" class="tab-content panel">
-      <h3>Export Project</h3>
-      <input type="text" id="project-name" placeholder="Project Name">
-      <button onclick="generateProjectGUI()">Generate & Download ZIP</button>
-      <div id="export-status"></div>
-    </div>
-  </div>
-
-  <!-- Right Panel: Preview / Info -->
-  <div id="right-panel">
-    <div class="panel" id="preview-panel">
-      <h3>Preview / Info</h3>
-      <div id="preview-content">Select a scene or asset to preview details here.</div>
+      <div class="tab-header">
+        <div class="tab active" data-tab="tab-upload">Upload</div>
+        <div class="tab" data-tab="tab-list">List</div>
+      </div>
+      <div id="tab-upload" class="tab-content active">
+        <input type="file" id="asset-upload" multiple>
+        <select id="asset-type">
+          <option value="texture">Texture</option>
+          <option value="gltf">GLTF Model</option>
+          <option value="audio">Audio</option>
+          <option value="font">Font</option>
+        </select>
+        <button onclick="uploadAssetsGUI()">Upload Asset(s)</button>
+      </div>
+      <div id="tab-list" class="tab-content">
+        <ul id="asset-list"></ul>
+      </div>
     </div>
   </div>
+
+  <!-- Project Export -->
+  <div class="panel" id="export-panel">
+    <h3>Export Project</h3>
+    <input type="text" id="project-name" placeholder="Project Name">
+    <button onclick="generateProjectGUI()">Generate & Download ZIP</button>
+    <div id="export-status"></div>
+  </div>
+
+  <!-- NLP Interface -->
+  <div class="panel" id="nlp-panel">
+    <h3>NLP Interface</h3>
+    <div id="nlp-interface"></div>
+    <input type="text" id="nlp-command" placeholder="Type command here">
+    <button onclick="sendNLPCommandGUI()">Send</button>
+  </div>
+
 </div>
 
-<!-- Bottom NLP Panel -->
-<div id="nlp-panel">
-  <div id="nlp-interface"></div>
-  <input type="text" id="nlp-command" placeholder="Type command here">
-  <button onclick="sendNLPCommandGUI()">Send</button>
-</div>
-
-<!-- Local Libraries -->
+<!-- Libraries -->
 <script src="libs/jszip.min.js"></script>
 <script src="libs/FileSaver.min.js"></script>
-<script src="libs/nlp_pro.js"></script>
-<script src="godot.js"></script>
-<script src="project_manager.gd"></script>
+<script src="libs/project_manager.js"></script>
 
 <script>
-  // --- Tab switching ---
+document.addEventListener("DOMContentLoaded", () => {
+  // Tab switching
   const tabs = document.querySelectorAll(".tab");
   tabs.forEach(tab=>{
     tab.addEventListener("click", ()=>{
@@ -111,68 +193,72 @@
       document.getElementById(tab.dataset.tab).classList.add("active");
     });
   });
+});
 
-  // --- GUI functions connecting to ProjectManager ---
-  function addSceneGUI() {
-    const name = document.getElementById("scene-name").value.trim();
-    if(!name) return alert("Enter scene name");
-    const res = ProjectManager.add_scene(name);
-    document.getElementById("scene-list").innerHTML += `<div>${name}</div>`;
-    appendNLP(res);
+// GUI functions
+function addSceneGUI() {
+  const name = document.getElementById("scene-name").value.trim();
+  if(!name) return alert("Enter scene name");
+  const msg = ProjectManager.add_scene(name);
+  document.getElementById("scene-list").innerHTML += `<div>${name}</div>`;
+  appendNLP(msg);
+}
+
+function addNodeGUI() {
+  const nodeName = document.getElementById("node-name").value.trim();
+  const nodeType = document.getElementById("node-type").value;
+  const parent = document.getElementById("parent-name").value.trim();
+  const sceneList = document.getElementById("scene-list").children;
+  if(sceneList.length === 0) return alert("Add a scene first");
+  const sceneName = sceneList[sceneList.length-1].innerText;
+  const msg = ProjectManager.add_node(sceneName, nodeName, nodeType, parent);
+  document.getElementById("node-list").innerHTML += `<div>${nodeName} (${nodeType})</div>`;
+  appendNLP(msg);
+}
+
+function uploadAssetsGUI() {
+  const files = document.getElementById("asset-upload").files;
+  const type = document.getElementById("asset-type").value;
+  const list = document.getElementById("asset-list");
+  if(files.length === 0) return alert("Select files to upload");
+
+  for(let file of files){
+    const reader = new FileReader();
+    reader.onload = (e) => {
+      const arrayBuffer = e.target.result;
+      const uint8 = new Uint8Array(arrayBuffer);
+      const msg = ProjectManager.upload_asset(file.name, type, uint8);
+      list.innerHTML += `<li>${file.name} (${type})</li>`;
+      appendNLP(msg);
+    };
+    reader.readAsArrayBuffer(file);
   }
+}
 
-  function addNodeGUI() {
-    const nodeName = document.getElementById("node-name").value.trim();
-    const nodeType = document.getElementById("node-type").value;
-    const parent = document.getElementById("parent-name").value.trim();
-    const sceneList = document.getElementById("scene-list").children;
-    if(sceneList.length === 0) return alert("Add a scene first");
-    const sceneName = sceneList[sceneList.length-1].innerText;
-    const res = ProjectManager.add_node(sceneName, nodeName, nodeType, parent);
-    document.getElementById("node-list").innerHTML += `<div>${nodeName} (${nodeType})</div>`;
-    appendNLP(res);
-  }
+async function generateProjectGUI() {
+  const projectName = document.getElementById("project-name").value.trim() || "GodotProject";
+  const status = document.getElementById("export-status");
+  status.innerText = "Generating project ZIP...";
+  appendNLP(`Generating project '${projectName}'...`);
 
-  function uploadAssetsGUI() {
-    const files = document.getElementById("asset-upload").files;
-    const type = document.getElementById("asset-type").value;
-    const list = document.getElementById("asset-list");
-    if(files.length === 0) return alert("Select files to upload");
+  await ProjectManager.generate_project_zip(projectName);
+  status.innerText = `Project '${projectName}' ZIP ready for download.`;
+}
 
-    for(let file of files){
-      const reader = new FileReader();
-      reader.onload = (e)=>{
-        const arrayBuffer = e.target.result;
-        const uint8 = new Uint8Array(arrayBuffer);
-        ProjectManager.upload_asset(file.name, type, uint8);
-        list.innerHTML += `<li>${file.name} (${type})</li>`;
-        appendNLP(`Asset '${file.name}' uploaded as ${type}.`);
-      };
-      reader.readAsArrayBuffer(file);
-    }
-  }
+function sendNLPCommandGUI() {
+  const cmd = document.getElementById("nlp-command").value.trim();
+  if(!cmd) return;
+  appendNLP(`> ${cmd}`);
+  document.getElementById("nlp-command").value = "";
+  const response = ProjectManager.process_nlp_command(cmd);
+  appendNLP(response);
+}
 
-  async function generateProjectGUI() {
-    const projectName = document.getElementById("project-name").value.trim() || "GodotProject";
-    await ProjectManager.generate_project_zip(projectName);
-  }
-
-  async function sendNLPCommandGUI() {
-    const cmd = document.getElementById("nlp-command").value.trim();
-    if(!cmd) return;
-    document.getElementById("nlp-command").value = "";
-    await ProjectManager.process_nlp_command(cmd);
-  }
-
-  function appendNLP(message) {
-    const panel = document.getElementById("nlp-interface");
-    panel.innerHTML += `<div>${message}</div>`;
-    panel.scrollTop = panel.scrollHeight;
-  }
-
-  // Initialize Godot Runtime (optional)
-  if(window.godotInstance) initGodotRuntime(window.godotInstance);
+function appendNLP(message) {
+  const panel = document.getElementById("nlp-interface");
+  panel.innerHTML += `<div>${message}</div>`;
+  panel.scrollTop = panel.scrollHeight;
+}
 </script>
-
 </body>
 </html>
