--- a/index.html
+++ b/index.html
@@ -4,15 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>GodotGameAssembler</title>
-<style>
-  body { font-family: sans-serif; margin:0; padding:0; background:#1e1e1e; color:#f0f0f0; }
-  header { background:#282c34; padding:1em; text-align:center; font-size:1.5em; }
-  #container { display:flex; flex-wrap:wrap; padding:1em; gap:1em; }
-  .panel { background:#2b2b2b; padding:1em; border-radius:8px; flex:1; min-width:300px; max-width:600px; }
-  button { margin-top:0.5em; padding:0.5em 1em; font-size:1em; border:none; border-radius:4px; cursor:pointer; }
-  input, select, textarea { width:100%; margin-top:0.5em; padding:0.5em; border-radius:4px; border:none; }
-  #nlp-interface { height:150px; overflow-y:auto; background:#1b1b1b; padding:0.5em; border-radius:4px; }
-</style>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header>GodotGameAssembler</header>
@@ -63,89 +55,88 @@
 
   <!-- NLP Interface -->
   <div class="panel" id="nlp-panel">
-    <h3>NLP Interface</h3>
+    <h3>Conversation & NLP</h3>
     <div id="nlp-interface"></div>
     <input type="text" id="nlp-command" placeholder="Type command here">
     <button onclick="sendNLPCommandGUI()">Send</button>
   </div>
 </div>
 
-<!-- Local Libraries -->
+<!-- Libraries -->
 <script src="libs/jszip.min.js"></script>
 <script src="libs/FileSaver.min.js"></script>
-<script src="libs/project_manager.js"></script>
+<script src="project_manager.js"></script>
 
 <script>
-  // --- GUI Helpers ---
-  function appendNLP(message) {
-    const panel = document.getElementById("nlp-interface");
-    panel.innerHTML += `<div>${message}</div>`;
-    panel.scrollTop = panel.scrollHeight;
+function appendNLP(message) {
+  const panel = document.getElementById("nlp-interface");
+  panel.innerHTML += `<div>${message}</div>`;
+  panel.scrollTop = panel.scrollHeight;
+}
+
+// --- Scene GUI ---
+function addSceneGUI() {
+  const name = document.getElementById("scene-name").value.trim();
+  if(!name) return alert("Enter scene name");
+  ProjectManager.add_scene(name);
+  document.getElementById("scene-list").innerHTML += `<div>${name}</div>`;
+  appendNLP(`Scene '${name}' added.`);
+}
+
+function addNodeGUI() {
+  const nodeName = document.getElementById("node-name").value.trim();
+  const nodeType = document.getElementById("node-type").value;
+  const parent = document.getElementById("parent-name").value.trim();
+  const sceneList = document.getElementById("scene-list").children;
+  if(sceneList.length === 0) return alert("Add a scene first");
+  const sceneName = sceneList[sceneList.length-1].innerText;
+  ProjectManager.add_node(sceneName, nodeName, nodeType, parent);
+  document.getElementById("node-list").innerHTML += `<div>${nodeName} (${nodeType})</div>`;
+  appendNLP(`Node '${nodeName}' of type '${nodeType}' added to scene '${sceneName}'.`);
+}
+
+// --- Asset GUI ---
+function uploadAssetsGUI() {
+  const files = document.getElementById("asset-upload").files;
+  const type = document.getElementById("asset-type").value;
+  const list = document.getElementById("asset-list");
+  if(files.length === 0) return alert("Select files to upload");
+
+  for(let file of files){
+    const reader = new FileReader();
+    reader.onload = (e) => {
+      const arrayBuffer = e.target.result;
+      const uint8 = new Uint8Array(arrayBuffer);
+      ProjectManager.upload_asset(file.name, type, uint8);
+      list.innerHTML += `<li>${file.name} (${type})</li>`;
+      appendNLP(`Asset '${file.name}' uploaded as ${type}.`);
+    };
+    reader.readAsArrayBuffer(file);
   }
+}
 
-  // --- Scene & Node GUI ---
-  function addSceneGUI() {
-    const name = document.getElementById("scene-name").value.trim();
-    if(!name) return alert("Enter scene name");
-    ProjectManager.add_scene(name);
-    document.getElementById("scene-list").innerHTML += `<div>${name}</div>`;
-    appendNLP(`Scene '${name}' added.`);
-  }
+// --- Export GUI ---
+async function generateProjectGUI() {
+  const projectName = document.getElementById("project-name").value.trim() || "GodotProject";
+  const status = document.getElementById("export-status");
+  status.innerText = "Generating project ZIP...";
+  appendNLP(`Generating project '${projectName}'...`);
 
-  function addNodeGUI() {
-    const nodeName = document.getElementById("node-name").value.trim();
-    const nodeType = document.getElementById("node-type").value;
-    const parent = document.getElementById("parent-name").value.trim();
-    const sceneList = document.getElementById("scene-list").children;
-    if(sceneList.length === 0) return alert("Add a scene first");
-    const sceneName = sceneList[sceneList.length-1].innerText;
-    ProjectManager.add_node(sceneName, nodeName, nodeType, parent);
-    document.getElementById("node-list").innerHTML += `<div>${nodeName} (${nodeType})</div>`;
-    appendNLP(`Node '${nodeName}' of type '${nodeType}' added to scene '${sceneName}'.`);
-  }
+  const zipBlob = await ProjectManager.generate_project(projectName);
+  saveAs(zipBlob, `${projectName}.zip`);
+  status.innerText = `Project '${projectName}' ZIP ready for download.`;
+  appendNLP(`Project '${projectName}' generated and ready for download.`);
+}
 
-  // --- Asset GUI ---
-  function uploadAssetsGUI() {
-    const files = document.getElementById("asset-upload").files;
-    const type = document.getElementById("asset-type").value;
-    const list = document.getElementById("asset-list");
-    if(files.length === 0) return alert("Select files to upload");
-
-    for(let file of files){
-      const reader = new FileReader();
-      reader.onload = (e) => {
-        const arrayBuffer = e.target.result;
-        const uint8 = new Uint8Array(arrayBuffer);
-        ProjectManager.upload_asset(file.name, type, uint8);
-        list.innerHTML += `<li>${file.name} (${type})</li>`;
-        appendNLP(`Asset '${file.name}' uploaded as ${type}.`);
-      };
-      reader.readAsArrayBuffer(file);
-    }
-  }
-
-  // --- Project Export GUI ---
-  async function generateProjectGUI() {
-    const projectName = document.getElementById("project-name").value.trim() || "GodotProject";
-    const status = document.getElementById("export-status");
-    status.innerText = "Generating project ZIP...";
-    appendNLP(`Generating project '${projectName}'...`);
-
-    const zipBlob = await ProjectManager.generate_project(projectName);
-    saveAs(zipBlob, `${projectName}.zip`);
-    status.innerText = `Project '${projectName}' ZIP ready for download.`;
-    appendNLP(`Project '${projectName}' generated and ready for download.`);
-  }
-
-  // --- NLP GUI ---
-  function sendNLPCommandGUI() {
-    const cmd = document.getElementById("nlp-command").value.trim();
-    if(!cmd) return;
-    appendNLP(`> ${cmd}`);
-    document.getElementById("nlp-command").value = "";
-    const response = ProjectManager.process_nlp_command(cmd);
-    appendNLP(response);
-  }
+// --- NLP GUI ---
+function sendNLPCommandGUI() {
+  const cmd = document.getElementById("nlp-command").value.trim();
+  if(!cmd) return;
+  appendNLP(`> ${cmd}`);
+  document.getElementById("nlp-command").value = "";
+  const response = ProjectManager.process_nlp_command(cmd);
+  appendNLP(response);
+}
 </script>
 </body>
 </html>
