--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <!-- Libraries -->
 <script src="libs/jszip.min.js"></script>
 <script src="libs/FileSaver.min.js"></script>
-<script src="project_manager.js"></script>
+<script src="libs/project_manager.js"></script>
 
 <script>
 function appendNLP(message) {
